<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BB633"
    android:backgroundTint="#CFEDD8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BtnRecetarium"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="39dp"
        android:backgroundTint="#8AC8A6"
        android:text="@string/btn_gestion"
        app:layout_constraintBottom_toTopOf="@+id/BtnHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    .\gradlew assembleRelease<Button
        android:id="@+id/BtnHistorial"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="#8AC8A6"
        android:text="@string/btn_menus_semanales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnRecetarium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="223dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="179dp"
        android:contentDescription="@string/img_main_desc"
        app:layout_constraintBottom_toTopOf="@+id/BtnRecetarium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_recetarium" />
</androidx.constraintlayout.widget.ConstraintLayout>