<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFEDD8"
    tools:context=".formulario_recetarium">

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="193dp"
        android:text="@string/label_nombre_receta"
        android:textColor="#507561"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etNombrePlato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#8AC8A6"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardarReceta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerContainer" />

    <Button
        android:id="@+id/btnGuardarReceta"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="#8AC8A6"
        android:text="@string/btn_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVolver"
        app:layout_constraintTop_toBottomOf="@+id/spinnerContainer" />

    <EditText
        android:id="@+id/etNombrePlato"
        android:layout_width="329dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPasosReceta"
        android:layout_width="326dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="18dp"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/label_pasos"
        android:inputType="text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/spinnerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="69dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Spinner
            android:id="@+id/spinnerDish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/empty_array"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/empty_array"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerFoodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/empty_array"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="202dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="193dp"
        android:text="@string/label_etiquetas"
        android:textColor="#507561"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasosReceta" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="193dp"
        android:text="Pasos para el plato:"
        android:textColor="#507561"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etPasosReceta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombrePlato" />

</androidx.constraintlayout.widget.ConstraintLayout>